force-app/main/default/objects/Record_Access_Rule__mdt/Record_Access_Rule__mdt.object-meta.xml
<CustomObject>
    <label>Record Access Rule</label>
    <pluralLabel>Record Access Rules</pluralLabel>
</CustomObject>