force-app/main/default/objects/Record_Access_Rule__mdt/fields/Account_Access__c.field-meta.xml
<CustomField>
    <fullName>Account_Access__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Account Access</label>
    <type>Checkbox</type>
</CustomField>