force-app/main/default/objects/Record_Access_Rule__mdt/fields/Contact_Access__c.field-meta.xml
<CustomField>
    <fullName>Contact_Access__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contact Access</label>
    <type>Checkbox</type>
</CustomField>