force-app/main/default/objects/Record_Access_Rule__mdt/fields/Opportunity_Access__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Access__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Opportunity Access</label>
    <type>Checkbox</type>
</CustomField>